force-app/main/default/objects/Dealer__c/fields/Aadhar_number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_number__c</fullName>
    <description>Store&apos;s Aadhar number</description>
    <label>Aadhar number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>