force-app/main/default/objects/Dealer__c/fields/Dealer_ID__c.field-meta.xml
<CustomField>
    <fullName>Dealer_ID__c</fullName>
    <description>Dealer&apos;s ID</description>
    <displayFormat>DI-{000}</displayFormat>
    <label>Dealer ID</label>
    <type>AutoNumber</type>
</CustomField>