force-app/main/default/objects/Dealer__c/fields/Externaldealerid__c.field-meta.xml
<CustomField>
    <fullName>Externaldealerid__c</fullName>
    <externalId>true</externalId>
    <label>Externaldealerid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>