force-app/main/default/objects/Dealer__c/fields/Maximum_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Deposit__c</fullName>
    <description>Maximum deposit of the retail stores</description>
    <label>Maximum Deposit</label>
    <summarizedField>Retail_Store__c.Deposit_Amount__c</summarizedField>
    <summaryForeignKey>Retail_Store__c.Dealer__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>