force-app/main/default/objects/Dealer__c/fields/Total_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_Deposit__c</fullName>
    <description>Total deposit of the retail stores</description>
    <label>Total Deposit</label>
    <summarizedField>Retail_Store__c.Deposit_Amount__c</summarizedField>
    <summaryForeignKey>Retail_Store__c.Dealer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>