force-app/main/default/objects/Dealer__c/fields/Total_Stores__c.field-meta.xml
<CustomField>
    <fullName>Total_Stores__c</fullName>
    <description>Count of stores</description>
    <label>Total Stores</label>
    <summaryForeignKey>Retail_Store__c.Dealer__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>