force-app/main/default/objects/Dealer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Deposit__c</columns>
    <columns>Total_Stores__c</columns>
    <columns>Maximum_Deposit__c</columns>
    <columns>Dealer_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>